--- a/system/application/front/configs/application.ini
+++ b/system/application/front/configs/application.ini
@@ -32,6 +32,14 @@ slavedb.params.password = "1111"
 slavedb.params.dbname = "1111"
 slavedb.params.charset = "UTF8"
 
+;; DB(session)
+sessiondb.adapter = PDO_MySQL
+sessiondb.params.host = "127.0.0.1"
+sessiondb.params.username = "1111"
+sessiondb.params.password = "1111"
+sessiondb.params.dbname = "1111"
+sessiondb.params.charset = "UTF8"
+
 ;;; DB(Master)
 ;db.adapter = PDO_MySQL
 ;db.params.host = "1111"
