--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,3 @@
-php_value display_errors on
-
-#RewriteCond %{HTTPS} off
-#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
-
 RewriteEngine On
 # The following rule tells Apache that if the requested filename
 # exists, simply serve it.
@@ -20,20 +15,5 @@ RewriteCond %{REQUEST_URI}::$1 ^(/.+)(.+)::\2$
 #RewriteCond %{REQUEST_URI}::$1 ^(/.+)(.+)::$
 RewriteRule ^(.*)$ - [E=BASE:%1]
 RewriteRule ^(.*)$ %{ENV:BASE}index.php [NC,L]
-php_value max_input_vars 20000
 
-
-#<Files ~ "^\.(htaccess|htpasswd)$">
-#deny from all
-#</Files>
-#AuthUserFile /home/www/demo.majestic-pic.com/.htpasswd
-#AuthGroupFile /dev/null
-#AuthName "Please enter your ID and password"
-#AuthType Basic
-#require valid-user 
-#order deny,allow
-
-
-php_value include_path ".;C:\xampp\htdocs\search\system\ZendFramework-1.12.20\library"
-"
-
+php_value include_path ".;C:\xampp\htdocs\MyOrderSheet\system\ZendFramework-1.12.20\library"
